@@ -8,29 +8,29 @@
 12f675
 12f683
 12f752
+16c62
+16c63a
+16c65b
+16c71
+16c72
+16c73b
+16c74b
 16c432
 16c433
 16c554
 16c557
 16c558
-16c62
 16c620
 16c620a
 16c621
 16c621a
 16c622
 16c622a
-16c63a
-16c65b
-16c71
 16c710
 16c711
 16c715
 16c717
-16c72
-16c73b
 16c745
-16c74b
 16c765
 16c770
 16c771
@@ -40,9 +40,17 @@
 16c782
 16c925
 16c926
+16f72
+16f73
+16f74
+16f76
+16f77
+16f84
+16f84a
+16f87
+16f88
 16f610
 16f616
-16hv616
 16f627
 16f627a
 16f628
@@ -62,7 +70,6 @@
 16f690
 16f707
 16f716
-16f72
 16f720
 16f721
 16f722
@@ -72,20 +79,13 @@
 16f724
 16f726
 16f727
-16f73
 16f737
-16f74
 16f747
-16f76
 16f767
-16f77
 16f777
 16f785
 16f818
 16f819
-16f84
-16f84a
-16f87
 16f870
 16f871
 16f872
@@ -102,18 +102,18 @@
 16f884
 16f886
 16f887
-16f88
 16f913
 16f914
 16f916
 16f917
 16f946
+16hv616
 
 # enhanced cores
 12f1501
-12lf1552
 12f1822
 12f1840
+12lf1552
 16f1454
 16f1455
 16f1458
@@ -135,6 +135,8 @@
 16f1784
 16f1786
 16f1787
+16f1788
+16f1789
 16f1823
 16f1824
 16f1825
@@ -143,11 +145,6 @@
 16f1828
 16f1829
 16f1847
-16lf1902 # gputils r629, 2011-11-08
-16lf1903 # gputils r629, 2011-11-08
-16lf1904 # gputils r629, 2011-11-08
-16lf1906 # gputils r629, 2011-11-08
-16lf1907 # gputils r629, 2011-11-08
 16f1933
 16f1934
 16f1936
@@ -156,3 +153,8 @@
 16f1939
 16f1946 # gputils r629, 2011-11-08
 16f1947 # gputils r629, 2011-11-08
+16lf1902 # gputils r629, 2011-11-08
+16lf1903 # gputils r629, 2011-11-08
+16lf1904 # gputils r629, 2011-11-08
+16lf1906 # gputils r629, 2011-11-08
+16lf1907 # gputils r629, 2011-11-08
