@@ -43222,12 +43222,12 @@ Supported devices with enhanced cores:
 
 \begin_layout Standard
 16F: 1454, 1455, 1458, 1459, 1503, 1507, 1508, 1509, 1512, 1513, 1516, 1517,
- 1518, 1519, 1526, 1527, 1782, 1783, 1784, 1786, 1787
+ 1518, 1519, 1526, 1527, 1782, 1783, 1784, 1786, 1787, 1788, 1789
 \end_layout
 
 \begin_layout Standard
 16LF: 1454, 1455, 1458, 1459, 1503, 1507, 1508, 1509, 1512, 1513, 1516,
- 1517, 1518, 1519, 1526, 1527, 1782, 1783, 1784, 1786, 1787
+ 1517, 1518, 1519, 1526, 1527, 1782, 1783, 1784, 1786, 1787, 1788, 1789
 \end_layout
 
 \begin_layout Standard
